# sum_of_subset

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  SumOfSubset.hpp
